yoshimi 1.4.1 M

2016-12-9 Will
* Bugfix: CLI load midilearn from list had missing return.

2016-12-8 Will
* Implemented 'activity' LED for midi-learn.
* CLI history lists now numbered.
* Implemented CLI midi-learn load & save.
* Updated docs.

2016-12-7 Will
* Added new file to dev_notes: System_Values.txt
* Added list file leafname to midi-learn window title.
* Updated docs.

2016-12-6 Will
* Started implementing CLI access to midi-learn.
  Also replaced 'changeLine(' with 'generalOpps(' as it
  is more appropriate now.

2016-12-5 Will
* Small optimsation in crossfade.
* Tidied up code in Interchange and MIdilearn.
* All sliders/knobs mid-learnable except 'Controllers'.

2016-12-5 Jörn
* More tooltips updates.

2016-12-5 Will
* Bugfix: midi-learn scroll bar wasn't working.
* Most sliders/rotary controls now available to midi-learn.

2016-12-4 Will
* Implemented full midi-learn save, load/recent.
* Set windows of vectors and midi-learn to Yoshimi defaults.
* Simplified history type selection in parameters window.
* Bugfix: segfault clicking empty parameters window :(
* Updated docs.

2016-12-3 Patch from : Alexander
* Bugfix: state load wasn't setting keyshifts.

2016-12-2 Will
* Started defining a standardised limits routine.
  This will return min, max, default for any control.
* Bugfix: LV2 was trapping unknown CCs instead of allowing
  them to be passed on to midi-learn!
* More work on limits.

2016-12-2 Merge from : Jörn
* Extensive tooltip upgrade dynamically giving real values.
* Some code style consistency adjustments.

2016-11-30 Will
* First draft of midi-learn saving.
* Bugfix: Had to remove fltk midi-learn warning.
  It goes into a loop on spinboxes :(
* midi-learn load and save both working with default name
  "testmidi" in /home/{user}.

2016-11-29 Will
* Corrected anomaly when changing midi-learn channel numbers.
* Changed 'doublefreqtrack' to 'freqtrackoffset'.

2016-11-28 Merge from : Jörn