@@ -70,13 +70,13 @@ class MidiLearn : private MiscFuncs
             string name; // optional derived from controller text?
         };
         bool learning;
-        string learnedName;
 
         void setTransferBlock(CommandBlock *getData, string name);
 
         bool runMidiLearn(float value, unsigned char CC, unsigned char chan, bool in_place);
         bool writeMidi(CommandBlock *putData, unsigned int writesize, bool in_place);
         int findEntry(list<LearnBlock> &midi_list, int lastpos, unsigned char CC, unsigned char chan, LearnBlock *block, bool show);
+        void listLine(int lineNo);
         void listAll(list<string>& msg_buf);
         bool remove(int itemNumber);
         void generalOpps(int value, unsigned char type, unsigned char control, unsigned char part, unsigned char kit, unsigned char engine, unsigned char insert, unsigned char parameter, unsigned char par2);
@@ -86,7 +86,7 @@ class MidiLearn : private MiscFuncs
 
     private:
         list<LearnBlock> midi_list;
-        //Control learnTransferBlock;
+        string learnedName;
         CommandBlock learnTransferBlock;
 
         void insert(unsigned char CC, unsigned char chan);
