@@ -1,7 +1,10 @@
 yoshimi 1.4.1 M
 
 2016-12-9 Will
-* Bugfix: CLI load midilearn from list had missing return.
+* Bugfix: CLI load midi-learn from list had missing return.
+* Implemented CLI midi-learn line & list removal.
+* CLI can now list individual midi learn lines in detail.
+* Sent midi-learn general ops through ring buffer.
 
 2016-12-8 Will
 * Implemented 'activity' LED for midi-learn.
